--- a/data/app_config_example.json
+++ b/data/app_config_example.json
@@ -1,11 +1,9 @@
 {
   "application": {
     "admins": [
-      "novusis"
+      "ADMIN_USER_NAME"
     ],
     "token": "YOUR_TELEGRAM_TOKEN",
-    "db_uri": "db/application.db",
-    "db_resources_uri": "db/resources.db",
     "info_channel_chat_id": 0
   }
 }
